# kladbiche

./: .replit  232323.py  README.md  add_test_data.py  check_users.py  create_superuser.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt  settings.py  update_sqlite.py  usersInfo
api/: __init__.py  views.py
attached_assets/: Pasted---1744105410767.txt  Pasted--1--1743500100908.txt
cemeteries/: admin.py  apps.py  models.py  urls.py  views.py
cemeteries/instance/: db.sqlite3
cemeteries/migrations/: 0001_initial.py  0002_initial.py
cemeteries/templates/: index.html
cemetery_map/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
cemetery_map/api/: serializers.py  urls.py  views.py
cemetery_map/cemetery_map/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
cemetery_map/graves/: __init__.py  admin.py  models.py  urls.py  views.py
cemetery_map/notifications/: __init__.py  urls.py  utils.py  views.py
cemetery_map/templates/: base.html
cemetery_map/users/: forms.py  views.py
core/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
graves/: admin.py  forms.py  models.py  urls.py  views.py
maps/: models.py  urls.py  views.py
myproject/: __init__.py  context_processors.py  settings.py  urls.py
notifications/: models.py  urls.py  utils.py  views.py
static/css/: auth.css  (+2 more)
templates/: admin_panel.html  base.html  burial_detail.html  index.html  map.html  search_results.html  user_profile.html
users/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py
(+48 files in other folders)
