[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "djangorestframework>=3.16.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
]
